TEST glyph map cut off fixing

--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -1943,28 +1943,43 @@ div:hover > .iconly {
   max-height: fit-content;
   overflow: hidden;
 }
-.glyph-map .glyph-map-rows.collapsed {
+
+.glyph-map.collapsed .glyph-map-rows {
   max-height: 52.4664rem;
 }
+
+.glyph-map.collapsed .glyph-map-rows .glyph-map-row:nth-child(n+3) {
+  display: none;
+}
+
 .glyph-map .glyph-map-rows .glyph-map-row {
   padding: 24px 0;
   border-bottom: 1px solid var(--foreground);
 }
+
 .glyph-map .glyph-map-rows .glyph-map-row:first-of-type {
   padding-top: 0;
 }
+
 .glyph-map .glyph-map-rows .glyph-map-row .glyph-map-row-header {
   font-family: "Font Regular";
   font-size: 18px;
   margin-bottom: 8px;
 }
+
 .glyph-map .glyph-map-rows .glyph-map-row .glyph-map-row-content {
   font-size: 50px;
   line-height: 60px;
 }
+
 .glyph-map .show-all-action {
   margin-top: 1.512rem;
 }
+
+.glyph-map.collapsed .show-all-action {
+  display: block;
+}
+
 
 .opentype-features-preview .text-container {
   font-size: 64px;
